--- a/homepage.html
+++ b/homepage.html
@@ -403,7 +403,7 @@ body .widget_eu_cookie_law_widget #eu-cookie-law.negative { background-color: #1
 			<span class="hide-visually collapsed-text">collapsed</span>
 		</label>
 
-		<div class="menu-primary-container"><ul id="menu-primary-1" class="main-menu" aria-label="submenu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-57 current_page_item menu-item-20"><a href="https://namefinder769737494.wordpress.com/" aria-current="page">Home</a></li>
+		<div class="menu-primary-container"><ul id="menu-primary-1" class="main-menu" aria-label="submenu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-57 current_page_item menu-item-20"><a href="https://nikitainiutkin.github.io/Landing-Page/homepage.html" aria-current="page">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="C:\Users\n14\Documents\Web Development\HTML - Personal site\aboutus.html">About Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a href="C:\Users\n14\Documents\Web Development\HTML - Personal site\aboutus.html">Contacts</a></li>
 </ul></div>	</nav><!-- #site-navigation -->
