--- a/homepage.html
+++ b/homepage.html
@@ -440,7 +440,7 @@ body .widget_eu_cookie_law_widget #eu-cookie-law.negative { background-color: #1
 
 
 
-<div class="wp-block-button"><a class="wp-block-button__link no-border-radius" href="/menu">View our shop</a></div>
+<div class="wp-block-button"><a class="wp-block-button__link no-border-radius" href="https://nikitainiutkin.github.io/Landing-Page/shop.html">View our shop</a></div>
 </div>
 
 
@@ -518,7 +518,7 @@ body .widget_eu_cookie_law_widget #eu-cookie-law.negative { background-color: #1
 
 
 
-<div class="wp-block-button aligncenter"><a class="wp-block-button__link no-border-radius" href="/menu">View Our Selection of Tobacco</a></div>
+<div class="wp-block-button aligncenter"><a class="wp-block-button__link no-border-radius" href="https://nikitainiutkin.github.io/Landing-Page/shop.html">View Our Selection of Tobacco</a></div>
 
 
 
@@ -576,7 +576,7 @@ body .widget_eu_cookie_law_widget #eu-cookie-law.negative { background-color: #1
 
 
 
-<div class="wp-block-button aligncenter"><a class="wp-block-button__link no-border-radius" href="/menu">View Our Full Selection of Pipes</a></div>
+<div class="wp-block-button aligncenter"><a class="wp-block-button__link no-border-radius" href="https://nikitainiutkin.github.io/Landing-Page/shop.html">View Our Full Selection of Pipes</a></div>
 
 
 
