--- a/contacts.html
+++ b/contacts.html
@@ -390,9 +390,9 @@ body .widget_eu_cookie_law_widget #eu-cookie-law.negative { background-color: #1
 			<span class="hide-visually collapsed-text">collapsed</span>
 		</label>
 
-		<div class="menu-primary-container"><ul id="menu-primary-1" class="main-menu" aria-label="submenu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-20"><a href="https://namefinder769737494.wordpress.com/">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="https://namefinder769737494.wordpress.com/?page_id=9">About Us</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-8 current_page_item menu-item-23"><a href="https://namefinder769737494.wordpress.com/contact/" aria-current="page">Contacts</a></li>
+		<div class="menu-primary-container"><ul id="menu-primary-1" class="main-menu" aria-label="submenu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-20"><a href="https://nikitainiutkin.github.io/Landing-Page/homepage.html">Home</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-22"><a href="https://nikitainiutkin.github.io/Landing-Page/aboutus.html">About Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-8 current_page_item menu-item-23"><a href="https://nikitainiutkin.github.io/Landing-Page/contacts.html" aria-current="page">Contacts</a></li>
 </ul></div>	</nav><!-- #site-navigation -->
 	</header><!-- #masthead -->
 
